# parrot-software-center

./: .eslintrc.js  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Injector.cpp  Injector.h  Makefile  README.md  apt.go  babel.config.js  go.mod  go.sum  main.cpp  main.go  package.json  tsconfig.json  webview.h
.erb/configs/: webpack.config.base.js  webpack.config.eslint.js  webpack.config.main.prod.babel.js  webpack.config.renderer.dev.babel.js  webpack.config.renderer.dev.dll.babel.js  webpack.config.renderer.prod.babel.js
.run/: PSC.run.xml
app/: App.tsx  Routes.tsx  app.global.css  app.html  globals.d.ts  i18n.js  i18n.tsx  index.tsx  main.dev.ts  package.json  serviceWorker.ts
app/actions/: alert.ts  apt.ts  auth.ts  index.ts  previews.ts  queue.ts  reviews.ts  searchResults.ts
app/components/: index.ts
app/containers/: index.ts
app/reducers/: alert.ts  auth.ts  index.ts  previews.ts  queue.ts  settings.ts
app/store/: history.ts  index.ts  root.actions.ts  root.reducer.ts  types.d.ts
assets/: icon.icns
buttons/: buttons.go
configs/: webpack.config.main.prod.babel.js  webpack.config.renderer.dev.babel.js  webpack.config.renderer.prod.babel.js
debian/: changelog  control
frontend/: .eslintrc.js  .prettierrc.js  README.md  package-lock.json  package.json
frontend/src/: App.js  serviceWorker.js
internals/scripts/: BabelRegister.js  CheckBuildsExist.js  CheckNativeDep.js  ElectronRebuild.js
src/: app.html  i18n.tsx  index.js  index.ts  index.tsx  main.dev.ts  package.json  preload.js  preload.ts
static/: index.html
test/: index.test.ts
(+136 files in other folders)
